Version 1.19.1
==================
- fixed invalid error mark when the LST file contains wrong position information
- improved license text for time limited licenses
- reverted "improved group search results by file, i.e. a tree view is used instead of a table"
- upgraded from Qt 6.7.2 to Qt 6.7.3

Version 1.19.0
==================
- added background color for syntax highlighting
- added "Close and delete project" action to Project Explorer context menu
- added virtual project, i.e. only create a gsp file on a certain number of files or if a main file is part of the project
- added zoom support for model dialog
- added Reference File (RF) creation to `Run with GDX creation`
- added color indicator for non-existing MIRO path
- added single project mode to focus one project only
- added licensed GAMS solvers to license text and dropped solver matrix
- added feature to store options for each main file. The main file can now be changed via the shortcuts `Shift+Ctrl+M` and `Shift+Cmd+M`. The old behavior can be activated via the settings.
- added default workspace clean-up during Studio start based on filters defined via the settings. In the future the project workspaces will be cleaned.
- added search icon to toolbar
- added support for `oneof`, `nullable`, and `default` schema in Connect Editor
- changed check for Studio updates on startup to deactivated
- fixed usage of license file specified via the `gamsconfig.yaml`
- fixed path of project options not recognized for file dialog
- fixed `Save As...` crash when saving to a file already known by Studio
- fixed `Save As...` so that the new file is added to the project and the original is removed
- fixed find GAMS on Windows
- improved select next project when closing the current edited file-node in the Project Explorer that is also part of other projects
- improved behaviour while debugging GAMS code
- improved allow to remove all but the main file from a running project