@@ -246,6 +246,7 @@ private slots:
     void neosProgress(gams::studio::AbstractProcess *proc, gams::studio::ProcState progress);
     void remoteProgress(gams::studio::AbstractProcess *proc, gams::studio::ProcState progress);
     void closeNodeConditionally(gams::studio::PExFileNode *node);
+    void closeAndDeleteFiles(QList<PExFileNode *> fileNodes);
     void addToGroup(gams::studio::PExGroupNode *group, const QString &filepath);
     void sendSourcePath(QString &source);
     void changeToLog(gams::studio::PExAbstractNode* node, bool openOutput, bool createMissing);
