@@ -1,5 +1,6 @@
 Version 1.19.1
 ==================
+- added allow to delete files from the Project Explorer
 - fixed invalid error mark when the LST file contains wrong position information
 - improved license text for time limited licenses
 - reverted "improved group search results by file, i.e. a tree view is used instead of a table"
